# CZEditorOld

./: .gitignore  Bez tytułu3.pdn  Bez tytułu5.pdn  Makefile  README.md  avreader.py  base_ui.py  compositing.py  compositingfunctions.py  compositingtemplate.py  customShaderCompilation.py  czeditor.py  generate.py  handles.py  imagefunctions.py  keyframes.py  openglfunctions.py  properties.py  property_widgets.py  pyproject.toml  requirements.txt  statefunctions.py  timelineitems.py  ui.py  util.py
.misc/: video.avi
czeditor/: __main__.py  actionfunctions.py  animation_keyframes.py  avreader.py  base_ui.py  code_edit_window.py  compositing.py  compositingfunctions.py  customShaderCompilation.py  czeditor.py  effectfunctions.py  generate.py  graphics.py  handles.py  imagefunctions.py  keyframes.py  openglfunctions.py  properties.py  property_widgets.py  shared.py  sourcefunctions.py  statefunctions.py  timelineitems.py  ui.py  util.py  value_converter_functions.py  value_mixer_functions.py  value_outputter_functions.py  value_provider_functions.py
czeditor/editor/: Button Pressed.pdn
czeditor/res/editor/: Button Pressedold.pdn
czeditor/util/: __init__.py  avhelper.py  installhelper.py  params_operations.py
editor/: Button Highlighted.pdn  Button Highlighted2.pdn  Button.pdn  mockup.pdn
misc/: Bez tytułu2.pdn  Bez tytułu4.pdn  video.webm
