[tool.poetry]
name = "CZEditor"
version = "0.0.1b0"
description = "General purpose video editor. Made in Python."
authors = []
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/CZEditor/CZEditor"

[tool.poetry.dependencies]
python = "^3.9,<3.12"

av = "^10.0.0"
moviepy = "~1.0"
numpy = "^1.24"
Pillow = "^9.4"
PyOpenGl = "~3.1"
PySide6 = "^6.2"
pyspng_seunglab = "~1.1"
requests = "^2.28.2"
scipy = "^1.10"
sounddevice = "~0.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "~2.0"
nuitka = "^1.3"
ordered-set = "^4.1"
pylint = "^2.14"
setuptools = "^65.0"
zstandard = "^0.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
