[build-system]
requires = ["setuptools>=65", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "czeditor/__version__.py"

[project]
name = "CZEditor"
dynamic = ["version"]
description = "General purpose video editor. Made in Python."
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Relt"},
]
maintainers = [
    {name = "CZEditor Team"},
    {name = "Relt"},
    {name = "Marcin Cieślak", email = "marcin.k.cieslak@gmail.com"},
]
keywords = [
    "video",
    "editor",
    "moviepy",
    "ffmpeg",
    "av",
    "numpy",
    "scipy",
    "Pillow",
    "PyOpenGL",
    "PySide6",
    "pyspng",
    "requests",
    "sounddevice",
    "keyframes",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
dependencies = [
    "av>=10.0.0",
    "moviepy~=1.0",
    "numpy>=1.24",
    "Pillow>=9.4",
    "PyOpenGl~=3.1",
    "PySide6>=6.2",
    "pyspng_seunglab~=1.1",
    "requests>=2.28.2",
    "scipy~=1.10",
    "sounddevice~=0.4",
]

[project.optional-dependencies]
dev = [
    "autopep8~=2.0",
    "pylint~=2.14",
]
build = [
    "build>=0.10",
    "nuitka>=1.3",
    "ordered-set>=4.1",
    "zstandard>=0.17",
]

[project.urls]
homepage = "https://github.com/CZEditor/CZEditor/"
repository = "https://github.com/CZEditor/CZEditor"
bugtracker = "https://github.com/CZEditor/CZEditor/issues"
wiki = "https://github.com/CZEditor/CZEditor/wiki"

[project.gui-scripts]
czeditor = "czeditor:__main__"
